crates/ruff_python_parser/tests/snapshots/invalid_syntax@template_strings_py313.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/template_strings_py313.py
---
## AST

```
Module(
    ModModule {
        node_index: AtomicNodeIndex(..),
        range: 0..98,
        body: [
            Expr(
                StmtExpr {
                    node_index: AtomicNodeIndex(..),
                    range: 44..52,
                    value: TString(
                        ExprTString {
                            node_index: AtomicNodeIndex(..),
                            range: 44..52,
                            value: TStringValue {
                                inner: Single(
                                    TString(
                                        TString {
                                            range: 44..52,
                                            node_index: AtomicNodeIndex(..),
                                            elements: [
                                                Interpolation(
                                                    InterpolatedElement {
                                                        range: 46..51,
                                                        node_index: AtomicNodeIndex(..),
                                                        expression: Name(
                                                            ExprName {
                                                                node_index: AtomicNodeIndex(..),
                                                                range: 47..50,
                                                                id: Name("hey"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: TStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: AtomicNodeIndex(..),
                    range: 53..61,
                    value: TString(
                        ExprTString {
                            node_index: AtomicNodeIndex(..),
                            range: 53..61,
                            value: TStringValue {
                                inner: Single(
                                    TString(
                                        TString {
                                            range: 53..61,
                                            node_index: AtomicNodeIndex(..),
                                            elements: [
                                                Interpolation(
                                                    InterpolatedElement {
                                                        range: 55..60,
                                                        node_index: AtomicNodeIndex(..),
                                                        expression: Name(
                                                            ExprName {
                                                                node_index: AtomicNodeIndex(..),
                                                                range: 56..59,
                                                                id: Name("hey"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: TStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: AtomicNodeIndex(..),
                    range: 62..72,
                    value: TString(
                        ExprTString {
                            node_index: AtomicNodeIndex(..),
                            range: 62..72,
                            value: TStringValue {
                                inner: Single(
                                    TString(
                                        TString {
                                            range: 62..72,
                                            node_index: AtomicNodeIndex(..),
                                            elements: [
                                                Interpolation(
                                                    InterpolatedElement {
                                                        range: 64..71,
                                                        node_index: AtomicNodeIndex(..),
                                                        expression: Name(
                                                            ExprName {
                                                                node_index: AtomicNodeIndex(..),
                                                                range: 65..70,
                                                                id: Name("there"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: TStringFlags {
                                                quote_style: Single,
                                                prefix: Regular,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: AtomicNodeIndex(..),
                    range: 73..97,
                    value: TString(
                        ExprTString {
                            node_index: AtomicNodeIndex(..),
                            range: 73..97,
                            value: TStringValue {
                                inner: Single(
                                    TString(
                                        TString {
                                            range: 73..97,
                                            node_index: AtomicNodeIndex(..),
                                            elements: [
                                                Literal(
                                                    InterpolatedStringLiteralElement {
                                                        range: 77..94,
                                                        node_index: AtomicNodeIndex(..),
                                                        value: "what's\nhappening?",
                                                    },
                                                ),
                                            ],
                                            flags: TStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: true,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Unsupported Syntax Errors

  |
1 | # parse_options: {"target-version": "3.13"}
2 | t"{hey}"
  | ^^ Syntax Error: Cannot use t-strings on Python 3.13 (syntax was added in Python 3.14)
3 | t"{hey}"
4 | t'{there}'
  |


  |
1 | # parse_options: {"target-version": "3.13"}
2 | t"{hey}"
3 | t"{hey}"
  | ^^ Syntax Error: Cannot use t-strings on Python 3.13 (syntax was added in Python 3.14)
4 | t'{there}'
5 | t"""what's
  |


  |
2 | t"{hey}"
3 | t"{hey}"
4 | t'{there}'
  | ^^ Syntax Error: Cannot use t-strings on Python 3.13 (syntax was added in Python 3.14)
5 | t"""what's
6 | happening?"""
  |


  |
3 | t"{hey}"
4 | t'{there}'
5 | t"""what's
  | ^^^^ Syntax Error: Cannot use t-strings on Python 3.13 (syntax was added in Python 3.14)
6 | happening?"""
  |
